syntax = "proto3";

package ads;

message Advertisement {
    int64 advertisement_id = 1;
    int64 advertisement_no = 2;
    int64 advertisement_application_position_id = 3;
    int64 advertisement_index = 4;
    int64 link_type = 5;
    string advertisement_img_url = 6;
    string advertisement_link_url = 7;
    string application_url = 8;
    int64 status = 9;
    string  created_at = 10;
}
message FindRequest {
    int64 position_id = 1;
}

message FindResponse {
    repeated Advertisement result = 1;
}

service AdsService {
    rpc Find (FindRequest) returns (FindResponse);
}